# moldinam

./: .gitignore  .gitmodules  .ycm_extra_conf.py  3d_anim.py  CMakeLists.txt  LICENSE  README.md  anim3d.py  visualise.py  visualise3D.py
__env/: md_env.py  mkbuild.py
__env/cmake/: FindOpenCL.cmake
c_code/: Makefile  dinamic.h  drand48.c  fileutil.h  main.c  moldinam  moldinam.c  output.txt  types.h
c_code/tests/: Makefile  check_molecule  check_molecule.c  check_molecule.gcda  check_molecule.gcno  check_molecule.sublime-workspace  dinamicTest  dinamicTest.c  dinamicTest.gcda  dinamicTest.gcno  test  test.c
data/: 50_part.conf  50_part.data  50_part_trace.conf  CMakeLists.txt  LJ_constants.conf  particles.py
data/results/: 1000_part_IVT.csv  cb278f9d.csv
docs/: Doxyfile
ext/: CMakeLists.txt
ext/boost/: CMakeLists.txt
ext/freeglut-2.8.1/: CMakeLists.txt
include/: md_algorithms.h  md_helpers.h  md_types.h  types.h
lib/: md_algorithms.cpp  md_helpers.cpp  md_types.cpp  moldinam_basic.cpp
scripts/: generate_particles.py
src/: CMakeLists.txt  build.cmd  dinamic.c  main.c  md_algorithms.cpp  md_helpers.cpp  moldinam_basic.cpp  moldynam_basic.cpp  portable_time.c  test_field.c  types.c
src/basic/: CMakeLists.txt  moldynam_basic.cpp
src/include/: config.hpp  dinamic.h  dll_defines.h  md_algorithms.h  md_helpers.h  md_types.h  options.h  portable_time.h  types.h
src/include/utils/: quicksort.hpp  stream.hpp  trace.hpp
src/include/utils/config/: config.hpp  config_manager.hpp  lennard_jones_config.hpp  particle_system_config.hpp  trace_config.hpp
src/launcher/: CMakeLists.txt  moldynam_launcher.cpp
src/lib/: CMakeLists.txt  config.cpp  md_algorithms.cpp  md_helpers.cpp  md_types.cpp
src/utils/: CMakeLists.txt  stream.cpp  trace.cpp
src/utils/config/: config.cpp  config_manager.cpp
src/visual/: CMakeLists.txt  cube_renderer.cpp  cube_renderer.h  particles_renderer.cpp  particles_renderer.h  renderer.cpp  renderer.hpp  visualizer.cpp
src/visual/glfw_wrapper/: glfw_wrapper.hpp
test/: CMakeLists.txt  algorithms_test.cpp  helpers_test.cpp  run_tests.py
test/testfiles/: test_helpers_read_from_file.xyz
tests/: CMakeLists.txt  helpers_test.cpp  run_tests.py
tests/src/: algorithms_test.cpp  config_test.cpp  file_io_test.cpp  native_platform_test.cpp  opencl_platform_test.cpp  trace_test.cpp  utils.hpp
tests/testfiles/: config_test.conf  config_test_init_file.conf  config_test_init_file.data  config_test_neg1.conf  config_test_neg2.conf  config_test_trace.conf  test_helpers_read_from_file.xyz
utils/: CMakeLists.txt  bench.py  generate_particles.py
visual/: CMakeLists.txt  cube_renderer.cpp  cube_renderer.h  particles_renderer.cpp  particles_renderer.h  render_particles.cpp  render_particles.h  renderer.cpp  renderer.hpp  shaders.cpp  shaders.h  visualizer.cpp
visual/glfw_wrapper/: glfw_wrapper.hpp
visualizer/: ScatterAnimPlotClass.py  test.py
